# INFT2503

./: .gitignore  README.md
Task1/: CMakeLists.txt  README.md  a.cpp  b.cpp  main.cpp  temperatures.txt
Task10/: CMakeLists.txt  glut-shapes.c  main.cpp  main2.cpp
Task2/: CMakeLists.txt  questionFive.cpp  questionFour.cpp  questionOneA.cpp  questionOneB.cpp  questionSix.cpp
Task3/: CMakeLists.txt
Task3/QuestionFour/: main.cpp
Task3/QuestionOne/: Circle.cpp  Circle.hpp  circle.cpp  circle.hpp
Task3/QuestionThree/: Commodity.cpp  Commodity.hpp  commodity.cpp  commodity.hpp  main.cpp
Task3/QuestionTwo/: main.cpp
Task4/: CMakeLists.txt
Task4/QuestionOne/: main.cpp
Task4/QuestionTwo/: main.cpp
Task5/: CMakeLists.txt
Task5/QuestionOne/: main.cpp
Task5/QuestionTwo/: main.cpp
Task6/: CMakeLists.txt
Task6/QuestionOne/: main.cpp
Task6/QuestionTwo/: main.cpp
Task7/: CMakeLists.txt
Task7/QuestionOne/: fraction.cpp  fraction.hpp  main.cpp
Task7/QuestionTwo/: main.cpp  set.cpp  set.hpp
Task8/: CMakeLists.txt
Task8/QuestionOne/: main.cpp
Task8/QuestionTwo/: main.cpp
Task9/: CMakeLists.txt  main.cpp
test/: test  test.cpp
